DataStore, shapefile : some improvements